base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ui-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: accel-webapp-dev.slac.stanford.edu
      http:
        paths:
          - pathType: Prefix
            path: /react-ui-demo(.*)
            backend:
              service:
                name: elog-plus-frontend-service
                port:
                  number: 80
